@@ -1,3 +1,12 @@
+2006-10-06  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails-1.3.4
+
+	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended): New method to send 'weblogUpdates.extendedPing'.
+	* donrails/app/apis/don_web_service.rb (DonWebService::ping): set 'alias :extendedPing :ping'.
+	(DonWebApi): likewise.
+	* donrails/test/unit/ping_test.rb (PingTest): test for it.
+
 2006-10-06  Akira TAGOH  <at@gclab.org>
 
 	* donrails/lib/modules/moinmoin.rb (DonRails::Moinmoin::body_to_html):
